// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> test App rendering unconnected user 1`] = `
<div>
  <Connect(HeaderSub) />
  <Popup
    hideBackdrop={true}
    open={true}
  >
    <Connect(Login) />
  </Popup>
</div>
`;

exports[`<App /> test App rendering with a player in Lobby 1`] = `
<div>
  <Connect(HeaderSub) />
  <Connect(LobbySub) />
</div>
`;

exports[`<App /> test App rendering with a player in game 1`] = `
<div>
  <Connect(HeaderSub) />
  <Connect(GameSub)
    room="Room1"
  />
</div>
`;
